--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ python = "^3.11"
 pdfminer-six = "^20221105"
 tqdm = "^4.66.1"
 freegpt = "^1.3.4"
+selenium = "^4.16.0"
+beautifulsoup4 = "^4.12.2"
+pandas = "^2.1.4"
 
 
 [tool.poetry.group.dev.dependencies]
